--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "rgvz",
+  "name": "regioviz",
   "version": "0.1.0",
   "description": "",
-  "license": "MIT",
+  "license": "GPLv3",
   "devDependencies": {
+    "autoprefixer": "^7.2.2",
+    "babel-core": "latest",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "latest",
     "cssnano": "^3.10.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-eslint": "^3.0.0",
+    "eslint": "^4.13.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "rollup": "^0.52.1",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-eslint": "^4.0.0",
+    "rollup-plugin-execute": "^1.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-postcss": "^0.4.3",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-serve": "^0.3.0",
-    "rollup-plugin-uglify": "^1.0.2",
-    "rollup-watch": "^3.2.2"
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-plugin-url": "^1.3.0",
+    "rollup-watch": "^4.3.1"
   },
   "dependencies": {
+    "@turf/centroid": "^5.1.5",
     "alertifyjs": "^1.11.0",
-    "d3-geo": "^1.6.3",
-    "d3-path": "^1.0.5",
-    "d3-request": "^1.0.5",
-    "d3-selection": "^1.0.6",
-    "d3-selection-multi": "^1.0.1",
+    "babel-polyfill": "^6.26.0",
     "debug": "^2.6.6",
     "tingle.js": "^0.12.0",
-    "tippy.js": "^1.4.1",
-    "vanilla-datatables": "latest"
+    "tippy.js": "^2.0.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
-    "dev": "rollup -c -w --environment SERVE"
+    "prepublish": "rm -rf build/img && rm -rf build/data && rm -rf build/vendor && cp -r src/img/ build/img/ && cp -r src/data/ build/data/ && cp -r src/vendor/ build/vendor/",
+    "build": "npm run prepublish && rollup -c",
+    "watch": "npm run prepublish && rollup -c -w",
+    "dev": "npm run prepublish && rollup -c -w --environment SERVE"
   }
 }
