--- a/package.json
+++ b/package.json
@@ -20,18 +20,15 @@
     "eslint": "^4.13.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "rollup": "^0.52.1",
+    "rollup": "0.52.1",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-clean": "^1.0.0",
-    "rollup-plugin-cleaner": "^0.2.0",
     "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-postcss": "^0.4.3",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-url": "^1.3.0",
     "rollup-watch": "^4.3.1"
   },
@@ -44,8 +41,9 @@
     "tippy.js": "^2.0.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
-    "dev": "rollup -c -w --environment SERVE"
+    "prepublish": "rm -rf build/* && cp src/index.html build/ && cp -r src/img/ build/img/ && cp -r src/data/ build/data/ && cp -r src/vendor/ build/vendor/ && cp src/img/favicon.ico build/favicon.ico",
+    "build": "npm run prepublish && rollup -c",
+    "watch": "npm run prepublish && rollup -c -w",
+    "dev": "npm run prepublish && rollup -c -w --environment SERVE"
   }
 }
