--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^4.13.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "jsep": "^0.3.3",
     "rollup": "0.52.1",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
@@ -37,6 +38,7 @@
     "alertifyjs": "^1.11.0",
     "babel-polyfill": "^6.26.0",
     "debug": "^2.6.6",
+    "jsep": "^0.3.3",
     "tingle.js": "^0.12.0",
     "tippy.js": "^2.0.4"
   },
