--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-url": "^1.3.0",
-    "rollup-watch": "^4.3.1"
+    "rollup-watch": "^4.3.1",
+    "sillyname": "^0.1.0"
   },
   "dependencies": {
     "@turf/centroid": "^5.1.5",
