--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "CECILL-2.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/riatelab/regioviz.git"
+    "url": "https://github.com/mthh/rgvzfra.git"
   },
   "author": {
     "name": "Matthieu Viry",
