code formatting + other minor stuffs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,8 @@
   "globals": {
     "ENV": true,
     "d3": false,
-    "document": true,
-    "MathJax": true
+    "MathJax": true,
+    "JSZip": true
   },
   "env": {
     "browser": true
@@ -17,10 +17,8 @@
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "no-underscore-dangle": 0,
     "no-mixed-operators": 0,
-    "function-paren-newline": 0,
     "func-names": 0,
     "prefer-destructuring": 0,
-    "object-curly-newline": 0,
     "object-shorthand": 0
   }
 }
