--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
   },
   "scripts": {
     "prepublish": "rm -rf build/* && cp src/index.html build/ && cp -r src/img/ build/img/ && cp -r src/data/ build/data/ && cp -r src/vendor/ build/vendor/ && cp src/img/favicon.ico build/favicon.ico",
-    "build": "npm run prepublish && rollup -c",
-    "watch": "npm run prepublish && rollup -c -w",
-    "dev": "npm run prepublish && rollup -c -w --environment SERVE"
+    "build": "npm run prepublish && ./node_modules/rollup/bin/rollup -c",
+    "watch": "npm run prepublish && ./node_modules/rollup/bin/rollup -c -w",
+    "dev": "npm run prepublish && ./node_modules/rollup/bin/rollup -c -w --environment SERVE"
   }
 }
